95% (brak możliwości anulowania rezerwacji)